[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/SearchMedia.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/AddMedium.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/SearchUsers.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Overdues.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/Settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/MainTabs.gd" type="Script" id=6]
[ext_resource path="res://images/Search.svg" type="Texture" id=7]
[ext_resource path="res://images/Time.svg" type="Texture" id=8]
[ext_resource path="res://images/Add.svg" type="Texture" id=9]
[ext_resource path="res://images/Tools.svg" type="Texture" id=10]
[ext_resource path="res://ui/Main.gd" type="Script" id=11]
[ext_resource path="res://ui/dark.tres" type="Theme" id=12]
[ext_resource path="res://ui/MessageDialog.gd" type="Script" id=13]
[ext_resource path="res://ui/ProjectDialog.gd" type="Script" id=14]
[ext_resource path="res://ui/Persistant.gd" type="Script" id=15]

[node name="MainWindow" type="Panel" groups=[
"CategoryChanger",
"Persist",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="Content"]
margin_right = 1200.0
margin_bottom = 22.0

[node name="File" type="MenuButton" parent="Content/Menu"]
margin_right = 77.0
margin_bottom = 22.0
text = ".menu.file"

[node name="Edit" type="MenuButton" parent="Content/Menu"]
margin_left = 81.0
margin_right = 165.0
margin_bottom = 22.0
text = ".action.edit"

[node name="Tabs" type="TabContainer" parent="Content"]
margin_top = 26.0
margin_right = 1200.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 6 )
icons = [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ) ]
labels = [ ".action.add", ".search.medium", ".search.user", ".alert.overdue", ".pref.title" ]

[node name="Add" parent="Content/Tabs" instance=ExtResource( 2 )]
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Media" parent="Content/Tabs" instance=ExtResource( 1 )]
visible = false
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Users" parent="Content/Tabs" instance=ExtResource( 3 )]
visible = false
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Overdues" parent="Content/Tabs" instance=ExtResource( 4 )]
visible = false
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Settings" parent="Content/Tabs" instance=ExtResource( 5 )]
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="MessageDialog" type="AcceptDialog" parent="." groups=[
"MessageDialog",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -34.0
margin_right = 82.0
margin_bottom = 34.0
popup_exclusive = true
window_title = ".alert.info"
resizable = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProjectDialog" type="FileDialog" parent="." groups=[
"ProjectDialog",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.5
margin_top = -301.0
margin_right = 454.5
margin_bottom = 301.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.db ; SQLite DB" )
current_dir = "/home/lars/Documents/projects/sbv-gd"
current_path = "/home/lars/Documents/projects/sbv-gd/"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Persist" type="Node" parent="."]
script = ExtResource( 15 )
[connection signal="show_overdues" from="Content/Tabs" to="Content/Tabs/Overdues" method="_on_show_overdues"]
[connection signal="tab_changed" from="Content/Tabs" to="Content/Tabs" method="_on_tab_changed"]
[connection signal="popup_hide" from="MessageDialog" to="MessageDialog" method="_popup_hide"]
[connection signal="file_selected" from="ProjectDialog" to="." method="_on_project_selected"]
[connection signal="popup_hide" from="ProjectDialog" to="ProjectDialog" method="_popup_hide"]
